package org.example.Enum;

public enum StatusTurma {
    ABERTA,
    FECHADA,
    CANCELADA,
    CONCLUIDA
}
