package org.example.Enum;

public enum TipoDisciplina {
    OPTATIVA,
    OBRIGATORIA
}
