package org.example;

public interface ICobranca {

    public void notificarCobranca();

}
