package org.example;

public interface ICurriculo {
    
    public String gerarCurriculoSemestral();

}
